# NixyPlayer

./: .clang-format  .gitignore  Editor.desktop  README.md
doc/: CommandLineArguments.csv  ErrorCodes.md  Extensions.md  PerformanceBinarySizeBuildTime.md  ToDo.md  Versioning.md
extensions/base/: Editor.desktop
extensions/base/src/: CMakeLists.txt  baseExtension.cpp
extensions/base/tools/: build.sh
resources/: Windows_extensions.nixyp  extensions.nixyp
samples/helloWorld/: main.js
samples/include/: azrael.js  main.js
samples/math/: main.js
shared/include/: NixyPlayerContext.h  utils.h
src/: CMakeLists.txt  constants.h  main.cpp
tools/: cleanDebugBuildRun.sh  cleanReleaseBuildRun.sh  debugBuildRun.sh  formatCode.sh  releaseBuildRun.sh  runSamples.sh
tools/mingw/: cleanMinGWReleaseBuildRun.sh
tools/mingw/x86/: cleanMinGWDebugBuildRun.sh
tools/private/: build.sh
